add coming soon msg

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>concept development - coming soon!</title>
+  <title>concept development</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>concept development</h1>
+  <h1>concept development - coming soon!</h1>
 </body>
 </html>
